# epub2audiobook

./: .gitignore  LICENSE  README.md  pyproject.toml
epub2audiobook/: __init__.py  cli.py  converter.py  epub_parser.py  metadata.py  models.py  progress.py
epub2audiobook/audio/: audio_utils.py  m4b_builder.py
epub2audiobook/tts/: __init__.py  base.py  edge_engine.py  kokoro_engine.py  piper_engine.py
epub2audiobook/web/: __init__.py  app.py  jobs.py
epub2audiobook/web/static/: index.html
tests/: test_converter.py  test_epub_parser.py  test_m4b_builder.py  test_tts_engines.py
