[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "epub2audiobook"
version = "0.1.0"
description = "Convert EPUB books to M4B audiobooks with multiple TTS engines"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "ebooklib>=0.18",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "tqdm>=4.66",
    "static-ffmpeg>=3.0",
    # TTS engines
    "edge-tts>=7.0",
    "kokoro>=0.9",
    "soundfile>=0.12",
    # Web interface
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sse-starlette>=2.0",
    "python-multipart>=0.0.7",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "black", "ruff"]

[project.urls]
Homepage = "https://github.com/marcogenna/epub2audiobook"
Repository = "https://github.com/marcogenna/epub2audiobook"
Issues = "https://github.com/marcogenna/epub2audiobook/issues"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[project.scripts]
epub2audiobook = "epub2audiobook.cli:main"
epub2audiobook-web = "epub2audiobook.web.app:main"

[tool.setuptools.packages.find]
include = ["epub2audiobook*"]
